// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightMenuList It is not rendered when active prop is false 1`] = `
<ul
  className="countries-menu-list__content"
>
  <style
    jsx={true}
  >
    
        display: none;
        text-transform: capitalize;
      
  </style>
</ul>
`;

exports[`SpotlightMenuList renders children correctly 1`] = `
<ul
  className="countries-menu-list__content"
>
  <div>
    Testing
  </div>
  <style
    jsx={true}
  >
    
        display: block !important;
        text-transform: capitalize;
      
  </style>
</ul>
`;

exports[`SpotlightMenuList renders correctly 1`] = `
<ul
  className="countries-menu-list__content"
>
  <style
    jsx={true}
  >
    
        display: block !important;
        text-transform: capitalize;
      
  </style>
</ul>
`;
